--- a/assets/stylesheets/pages/_spacing.scss
+++ b/assets/stylesheets/pages/_spacing.scss
@@ -1,4 +1,4 @@
-.measures {
+.spacing-demo {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
